--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 server.port=9999
+
+# 上传文件设置
+# 单个文件最大上传大小
+spring.servlet.multipart.max-file-size=2MB
+# 全部文件大小上限
+spring.servlet.multipart.max-request-size=10MB
+# 是否开启多文件上传
+spring.servlet.multipart.enabled=true
+
+#spring.servlet.multipart.location=
+#spring.servlet.multipart.file-size-threshold=
+#spring.servlet.multipart.resolve-lazily=true
