--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,9 @@ spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=10MB
 # 是否开启多文件上传
 spring.servlet.multipart.enabled=true
-
-#spring.servlet.multipart.location=
-#spring.servlet.multipart.file-size-threshold=
+# 上传文件的临时目录
+# spring.servlet.multipart.location=
+# 文件大小阈值，大于这个阈值时将写入到磁盘，否则存在于内存中
+#spring.servlet.multipart.file-size-threshold=0
+# 判断是否要延迟解析文件
 #spring.servlet.multipart.resolve-lazily=true
