--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,19 @@ spring.servlet.multipart.enabled=true
 #spring.servlet.multipart.file-size-threshold=0
 # 判断是否要延迟解析文件
 #spring.servlet.multipart.resolve-lazily=true
+
+##########################################
+### 数据源信息配置
+##########################################
+spring.datasource.url=jdbc:mysql://localhost:3306/springboottest?serverTimezone=GMT%2B8
+spring.datasource.username=root
+spring.datasource.password=123456
+#数据库驱动
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+##########################################
+### JPA持久化配置
+##########################################
+spring.jpa.database=mysql
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
